objects/INF_Application__c.object
<CustomObject>
    <label>Application</label>
    <nameField>
        <label>Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>INF_BL__c</fullName>
        <label>Business Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Analysis-Visualisation</fullName>
                </value>
                <value>
                    <fullName>Elements</fullName>
                </value>
                <value>
                    <fullName>Enterprise R-D</fullName>
                </value>
                <value>
                    <fullName>Imaging</fullName>
                </value>
                <value>
                    <fullName>Personal Applications</fullName>
                </value>
                <value>
                    <fullName>QA/QC</fullName>
                </value>
                <value>
                    <fullName>Signals</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INF_KW__c</fullName>
        <description>Enter Key words with &apos;,&apos; as separator</description>
        <inlineHelpText>Enter key words with &apos;,&apos; as separator</inlineHelpText>
        <label>Key Words</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INF_Default__c</fullName>
        <label>Active</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INF_Product_Line__c</fullName>
        <label>Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AVS</fullName>
                </value>
                <value>
                    <fullName>AVC</fullName>
                </value>
                <value>
                    <fullName>DSK</fullName>
                </value>
                <value>
                    <fullName>ENT</fullName>
                </value>
                <value>
                    <fullName>QAS</fullName>
                </value>
                <value>
                    <fullName>ISS</fullName>
                </value>
                <value>
                    <fullName>ELM</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>SIG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INF_Product_Group__c</fullName>
        <label>Product Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Spotfire</fullName>
                </value>
                <value>
                    <fullName>E-Notebook</fullName>
                </value>
                <value>
                    <fullName>CBOE</fullName>
                </value>
                <value>
                    <fullName>iLab/Limslink</fullName>
                </value>
                <value>
                    <fullName>Personal Applications</fullName>
                </value>
                <value>
                    <fullName>GeoSpiza</fullName>
                </value>
                <value>
                    <fullName>Columbus &amp; Volocity</fullName>
                </value>
                <value>
                    <fullName>Elements</fullName>
                </value>
                <value>
                    <fullName>Signals Notebook</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>